kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadefender-menlo
spec:
  type: NodePort
  selector:
    app: metadefender-menlo
  ports:
  - name: app-port
    protocol: TCP
    port: 60001
    targetPort: 3000
